@@ -3,7 +3,7 @@
   <legend>Select an admin option</legend>
   <div id="admin_options">
     <ul class="inline">
-      [% IF requestor.is_member_of('engineers') %]<li><a href="javascript:void(show_form('instrument_mod'))">[New Instrument Mod]</a></li>
+      [% IF requestor.is_member_of('engineers') %]<li><a href="javascript:void(show_form('instrument_mod'))">[New Instrument Upgrade]</a></li>
       <li><a href="javascript:void(show_form('instrument_status'))">[New Instrument Status]</a></li>
       [% END %][% IF requestor.is_member_of('admin') %]<li><a href="javascript:void(show_form('new_user'))">[New User]</a></li>
       <li><a href="javascript:void(show_form('new_usergroup'))">[New Usergroup]</a></li>
@@ -27,7 +27,7 @@
   function show_form(form) {
 [% IF requestor.is_member_of('engineers') %]
     if (form == 'instrument_mod') {
-      $('form_space').replace('<div id="form_space"><fieldset><legend>Enter new Instrument Mod</legend><form method="post" action="[% SCRIPT_NAME %]/administration/;create_instrument_mod"><label for="select existing mod description">Select a Mod Description:</label><select name="description"><option value="">-</option>[% FOREACH imd = model.instrument_mod_dict_descriptions %]<option value="[% imd.0 %]">[% imd.0 %]</option>[% END %]</select><label for="new mod description">Or new mod description:</label> <input type="text" name="new_description" /><br /><label for="new revision">New Revision:</label> <input type="text" name="revision" /> <input type="submit" value="New Mod" /></form></fieldset></div>');
+      $('form_space').replace('<div id="form_space"><fieldset><legend>Enter new Instrument Upgrade</legend><form method="post" action="[% SCRIPT_NAME %]/administration/;create_instrument_mod"><label for="select existing mod description">Select an upgrade description:</label><select name="description"><option value="">-</option>[% FOREACH imd = model.instrument_mod_dict_descriptions %]<option value="[% imd.0 %]">[% imd.0 %]</option>[% END %]</select><label for="new mod description"> Or new upgrade description:</label> <input type="text" name="new_description" /><br /><label for="new revision">New Revision:</label> <input type="text" name="revision" /> <input type="submit" value="New Upgrade" /></form></fieldset></div>');
     }
     if (form == 'instrument_status') {
       $('form_space').replace('<div id="form_space"><fieldset><legend>Enter new Instrument Status</legend><form method="post" action="[% SCRIPT_NAME %]/administration/;create_instrument_status"><label for="new instrument status">New Instrument Status:</label> <input type="text" name="description" /><input type="submit" value="New Status" /></form></fieldset></div>');
