@@ -1,5 +1,6 @@
 LIST OF CHANGES
 
+ - Change 'New Instrument Mod' to 'New Instrument Upgrade' on the admin options
  - Sort the dropdown menu of instruments on 'New Run' page
  - Usage page retired
 
